# serializer version: 1
# name: TestFinalize.test_conflict
  dict({
    'id': 'conflict',
    'message': 'Subtraction has already been finalized',
  })
# ---
# name: TestFinalize.test_not_found
  dict({
    'id': 'not_found',
    'message': 'Not found',
  })
# ---
# name: TestFinalize.test_success
  dict({
    'count': 100,
    'created_at': '2024-06-25T16:52:27.950000Z',
    'file': dict({
      'id': 1,
      'name': 'foobar.fq.gz',
    }),
    'files': list([
    ]),
    'gc': dict({
      'a': 0.319,
      'c': 0.18,
      'g': 0.18,
      'n': 0.002,
      't': 0.319,
    }),
    'id': '7cf872dc',
    'job': dict({
      'archived': False,
      'created_at': '2024-06-25T16:52:27.970000Z',
      'id': 'fb085f7f',
      'progress': 0,
      'stage': None,
      'state': 'waiting',
      'user': dict({
        'handle': 'leeashley',
        'id': 'bf1b993c',
      }),
      'workflow': 'create_subtraction',
    }),
    'linked_samples': list([
    ]),
    'name': 'foo',
    'nickname': 'bar',
    'ready': True,
    'user': dict({
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
  })
# ---
# name: TestUploadSubtractionFile.test_create
  dict({
    'download_url': '/subtractions/7cf872dc/files/subtraction.1.bt2',
    'id': 1,
    'name': 'subtraction.1.bt2',
    'size': 1,
    'subtraction': '7cf872dc',
    'type': 'bowtie2',
  })
# ---
# name: test_create
  dict({
    'count': None,
    'created_at': 'approximately_now_isoformat',
    'file': dict({
      'id': 1,
      'name': 'foobar.fq.gz',
    }),
    'files': list([
    ]),
    'gc': None,
    'id': 'abc123',
    'job': None,
    'linked_samples': list([
    ]),
    'name': 'Calamus',
    'nickname': 'Rim Palm',
    'ready': False,
    'user': dict({
      'handle': 'bob',
      'id': 'fb085f7f',
    }),
  })
# ---
# name: test_create[job]
  dict({
    '_id': 'bf1b993c',
    'acquired': False,
    'archived': False,
    'args': dict({
      'files': list([
        dict({
          'id': 1,
          'name': 'foobar.fq.gz',
        }),
      ]),
      'subtraction_id': 'abc123',
    }),
    'key': None,
    'ping': None,
    'rights': dict({
    }),
    'space': dict({
      'id': 0,
    }),
    'state': 'waiting',
    'status': list([
      dict({
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'step_description': None,
        'step_name': None,
        'timestamp': datetime.datetime(2024, 6, 25, 16, 53, 32, 442000),
      }),
    ]),
    'user': dict({
      'id': 'fb085f7f',
    }),
    'workflow': 'create_subtraction',
  })
# ---
# name: test_edit[data0]
  dict({
    'count': 1,
    'created_at': 'approximately_now_isoformat',
    'file': dict({
      'id': 1,
      'name': 'foobar.fq.gz',
    }),
    'files': list([
    ]),
    'gc': dict({
      'a': 0.2,
      'c': 0.2,
      'g': 0.2,
      'n': 0.2,
      't': 0.2,
    }),
    'id': '7cf872dc',
    'job': dict({
      'archived': False,
      'created_at': 'approximately_now_isoformat',
      'id': 'fb085f7f',
      'progress': 0,
      'stage': None,
      'state': 'waiting',
      'user': dict({
        'handle': 'leeashley',
        'id': 'bf1b993c',
      }),
      'workflow': 'create_subtraction',
    }),
    'linked_samples': list([
      dict({
        'id': '12',
        'name': 'Sample 12',
      }),
      dict({
        'id': '22',
        'name': 'Sample 22',
      }),
    ]),
    'name': 'Bar',
    'nickname': 'bar',
    'ready': True,
    'user': dict({
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_edit[data0].1
  dict({
    '_id': '7cf872dc',
    'count': 1,
    'created_at': 'approximately_now_datetime',
    'deleted': False,
    'file': dict({
      'id': 1,
      'name': 'foobar.fq.gz',
    }),
    'gc': dict({
      'a': 0.2,
      'c': 0.2,
      'g': 0.2,
      'n': 0.2,
      't': 0.2,
    }),
    'job': dict({
      'id': 'fb085f7f',
    }),
    'name': 'Bar',
    'nickname': 'bar',
    'ready': True,
    'space': dict({
      'id': 0,
    }),
    'upload': 1,
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_edit[data1]
  dict({
    'count': 1,
    'created_at': 'approximately_now_isoformat',
    'file': dict({
      'id': 1,
      'name': 'foobar.fq.gz',
    }),
    'files': list([
    ]),
    'gc': dict({
      'a': 0.2,
      'c': 0.2,
      'g': 0.2,
      'n': 0.2,
      't': 0.2,
    }),
    'id': '7cf872dc',
    'job': dict({
      'archived': False,
      'created_at': 'approximately_now_isoformat',
      'id': 'fb085f7f',
      'progress': 0,
      'stage': None,
      'state': 'waiting',
      'user': dict({
        'handle': 'leeashley',
        'id': 'bf1b993c',
      }),
      'workflow': 'create_subtraction',
    }),
    'linked_samples': list([
      dict({
        'id': '12',
        'name': 'Sample 12',
      }),
      dict({
        'id': '22',
        'name': 'Sample 22',
      }),
    ]),
    'name': 'foo',
    'nickname': 'Bar Subtraction',
    'ready': True,
    'user': dict({
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_edit[data1].1
  dict({
    '_id': '7cf872dc',
    'count': 1,
    'created_at': 'approximately_now_datetime',
    'deleted': False,
    'file': dict({
      'id': 1,
      'name': 'foobar.fq.gz',
    }),
    'gc': dict({
      'a': 0.2,
      'c': 0.2,
      'g': 0.2,
      'n': 0.2,
      't': 0.2,
    }),
    'job': dict({
      'id': 'fb085f7f',
    }),
    'name': 'foo',
    'nickname': 'Bar Subtraction',
    'ready': True,
    'space': dict({
      'id': 0,
    }),
    'upload': 1,
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_edit[data2]
  dict({
    'count': 1,
    'created_at': 'approximately_now_isoformat',
    'file': dict({
      'id': 1,
      'name': 'foobar.fq.gz',
    }),
    'files': list([
    ]),
    'gc': dict({
      'a': 0.2,
      'c': 0.2,
      'g': 0.2,
      'n': 0.2,
      't': 0.2,
    }),
    'id': '7cf872dc',
    'job': dict({
      'archived': False,
      'created_at': 'approximately_now_isoformat',
      'id': 'fb085f7f',
      'progress': 0,
      'stage': None,
      'state': 'waiting',
      'user': dict({
        'handle': 'leeashley',
        'id': 'bf1b993c',
      }),
      'workflow': 'create_subtraction',
    }),
    'linked_samples': list([
      dict({
        'id': '12',
        'name': 'Sample 12',
      }),
      dict({
        'id': '22',
        'name': 'Sample 22',
      }),
    ]),
    'name': 'foo',
    'nickname': '',
    'ready': True,
    'user': dict({
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_edit[data2].1
  dict({
    '_id': '7cf872dc',
    'count': 1,
    'created_at': 'approximately_now_datetime',
    'deleted': False,
    'file': dict({
      'id': 1,
      'name': 'foobar.fq.gz',
    }),
    'gc': dict({
      'a': 0.2,
      'c': 0.2,
      'g': 0.2,
      'n': 0.2,
      't': 0.2,
    }),
    'job': dict({
      'id': 'fb085f7f',
    }),
    'name': 'foo',
    'nickname': '',
    'ready': True,
    'space': dict({
      'id': 0,
    }),
    'upload': 1,
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_edit[data3]
  dict({
    'count': 1,
    'created_at': 'approximately_now_isoformat',
    'file': dict({
      'id': 1,
      'name': 'foobar.fq.gz',
    }),
    'files': list([
    ]),
    'gc': dict({
      'a': 0.2,
      'c': 0.2,
      'g': 0.2,
      'n': 0.2,
      't': 0.2,
    }),
    'id': '7cf872dc',
    'job': dict({
      'archived': False,
      'created_at': 'approximately_now_isoformat',
      'id': 'fb085f7f',
      'progress': 0,
      'stage': None,
      'state': 'waiting',
      'user': dict({
        'handle': 'leeashley',
        'id': 'bf1b993c',
      }),
      'workflow': 'create_subtraction',
    }),
    'linked_samples': list([
      dict({
        'id': '12',
        'name': 'Sample 12',
      }),
      dict({
        'id': '22',
        'name': 'Sample 22',
      }),
    ]),
    'name': 'Bar',
    'nickname': 'Bar Subtraction',
    'ready': True,
    'user': dict({
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_edit[data3].1
  dict({
    '_id': '7cf872dc',
    'count': 1,
    'created_at': 'approximately_now_datetime',
    'deleted': False,
    'file': dict({
      'id': 1,
      'name': 'foobar.fq.gz',
    }),
    'gc': dict({
      'a': 0.2,
      'c': 0.2,
      'g': 0.2,
      'n': 0.2,
      't': 0.2,
    }),
    'job': dict({
      'id': 'fb085f7f',
    }),
    'name': 'Bar',
    'nickname': 'Bar Subtraction',
    'ready': True,
    'space': dict({
      'id': 0,
    }),
    'upload': 1,
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_find[2-1]
  dict({
    'documents': list([
    ]),
    'found_count': 0,
    'page': 1,
    'page_count': 0,
    'per_page': 2,
    'ready_count': 0,
    'total_count': 0,
  })
# ---
# name: test_find[2-2]
  dict({
    'documents': list([
    ]),
    'found_count': 0,
    'page': 2,
    'page_count': 0,
    'per_page': 2,
    'ready_count': 0,
    'total_count': 0,
  })
# ---
# name: test_find[None-None]
  dict({
    'documents': list([
    ]),
    'found_count': 0,
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'ready_count': 0,
    'total_count': 0,
  })
# ---
# name: test_find_empty_subtractions
  dict({
    'documents': list([
    ]),
    'found_count': 0,
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'ready_count': 0,
    'total_count': 0,
  })
# ---
# name: test_get
  dict({
    'count': 1,
    'created_at': 'approximately_now_isoformat',
    'file': dict({
      'id': 1,
      'name': 'foobar.fq.gz',
    }),
    'files': list([
    ]),
    'gc': dict({
      'a': 0.2,
      'c': 0.2,
      'g': 0.2,
      'n': 0.2,
      't': 0.2,
    }),
    'id': '3cbb22cc',
    'job': dict({
      'archived': False,
      'created_at': 'approximately_now_isoformat',
      'id': '7cf872dc',
      'progress': 0,
      'stage': None,
      'state': 'waiting',
      'user': dict({
        'handle': 'leeashley',
        'id': 'fb085f7f',
      }),
      'workflow': 'create_subtraction',
    }),
    'linked_samples': list([
    ]),
    'name': 'foo',
    'nickname': 'bar',
    'ready': True,
    'user': dict({
      'handle': 'leeashley',
      'id': 'fb085f7f',
    }),
  })
# ---
# name: test_get_from_job
  dict({
    'count': 1,
    'created_at': 'approximately_now_isoformat',
    'file': dict({
      'id': 1,
      'name': 'foobar.fq.gz',
    }),
    'files': list([
    ]),
    'gc': dict({
      'a': 0.2,
      'c': 0.2,
      'g': 0.2,
      'n': 0.2,
      't': 0.2,
    }),
    'id': '7cf872dc',
    'job': dict({
      'archived': False,
      'created_at': 'approximately_now_isoformat',
      'id': 'fb085f7f',
      'progress': 0,
      'stage': None,
      'state': 'waiting',
      'user': dict({
        'handle': 'leeashley',
        'id': 'bf1b993c',
      }),
      'workflow': 'create_subtraction',
    }),
    'linked_samples': list([
    ]),
    'name': 'foo',
    'nickname': 'bar',
    'ready': True,
    'user': dict({
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
  })
# ---
